<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Friends 24</string>
    <string name="app_id">612138265545309</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="choose_friend">Zvolte příjemce</string>
    <string name="OK">OK</string>
    <string name="Yes">Ano</string>
    <string name="No">Ne</string>
    <string name="send">Odeslat</string>
    <string name="username">Uživatelské jméno</string>
    <string name="password">Heslo</string>
    <string name="login">Přihlásit</string>
    <string name="loginHint">Nemáte přístupové údaje?</string>
    <string name="loginHintLink"><a href="http://www.csas.cz">www.csas.cz</a></string>
    <string name="payment">Platby</string>
    <string name="collection">Sbírky</string>
    <string name="my_accounts">PŘEHLED MÝCH ÚČTŮ</string>
    <string name="new_payment">Nová platba</string>
    <string name="amount">Částka</string>
    <string name="amountHint">Částka</string>
    <string name="recipent">Příjemce</string>
    <string name="messageForRecipient">Poznámka</string>
    <string name="notif_email">Email notifikace</string>
    <!--<string name="friends24_server_url">http://friends24.apiary-proxy.com/Friends24Server/rest/</string>-->
    <!--<string name="friends24_server_url">http://friends24.apiary-mock.com/Friends24Server/rest/</string>-->
    <string name="friends24_server_url">http://startup.cloudapp.net:8080/Friends24Server/rest/</string>

    <string name="error">Chyba</string>
    <string name="info">Info</string>
    <string name="error_common">V aplikace došlo k chybě. Prosím kontaktujte správce aplikace.</string>
    <string name="invalid_password">Zadané heslo je nesprávné</string>
    <string name="locked_password">Přístup do aplikace byl zablokován</string>
    <string name="ok">OK</string>
    <string name="communicationError">Chyba při komunikaci se serverem</string>
    <string name="no_network_connection">Chyba připojení k internetu. Zkontrolujte nastavení telefonu</string>
    <string name="login_logo1">PLATBY&amp;SBÍRKY</string>
    <string name="login_logo2">s facebook přáteli</string>
    <string name="paymentHistory">HISTORIE PLATEB</string>
    <string name="CZK">Kč</string>
    <string name="amountError">Zadejte částku</string>
    <string name="noteError">Zadejte Poznámku</string>
    <string name="recipientError">Vyberte příjemnce</string>
    <string name="waitPlease">Čekejte prosím</string>
    <string name="sendFBMessageError">Chyba při posílání zprávy na Facebook</string>
    <string name="confirmation">POTVRZENÍ</string>
    <string name="payment_confirm_1">Vašemu příteli</string>
    <string name="payment_confirm_2">byl zaslán požadavek na přijetí\n platby. Stav platby si můžete\n kdykoliv zkontrolovat v aplikaci\n Friends24 nebo Servis24</string>
    <string name="new_payment_link"><![CDATA[<u>NOVÁ PLATBA</u>]]></string>
    <string name="fb_message_accout_not_known">Váš přítel Vám posílá peníze. Klikněte na odkaz níže, kde doplníte číslo Vašeho účtu.</string>
    <string name="fb_message_account_known">Váš přítel Vám posílá peníze. Pokud si přejete pro budoucí platby změnit číslo účtu, klikněte na odkaz níže.</string>
    <string name="selectRecipient"><![CDATA[<u>Zvolte příjemce</u>]]></string>
    <string name="newCollection">Nová sbírka</string>
    <string name="newCollectionUpper">NOVÁ SBÍRKA</string>
    <string name="collectionHistory">HISTORIE SBÍREK</string>
    <string name="collectionLinkInfo">Více info</string>
    <string name="notify">Připomenout</string>
    <string name="collectionName">Název</string>
    <string name="collectionNameFull">Název sbírky</string>
    <string name="description">Popis</string>
    <string name="addPhoto"><![CDATA[<u>Přidat fotku</u>]]></string>
    <string name="addLink"><![CDATA[<u>Vložit odkaz</u>]]></string>
    <string name="collectionEndDate">Ukončení</string>
    <string name="participant">Účastník</string>
    <string name="fromFacebook">z Facebooku</string>
    <string name="addParticipant"><![CDATA[<u>Přidat kamaráda</u>]]></string>
    <string name="fromEmail">skrze email</string>
    <string name="createCollection">Vytvořit sbírku</string>
    <string name="pickParticipant">Zvolte účastníka</string>
    <string name="from">z</string>
    <string name="targetAmmountNotSet">Zadejte nejprve celkovou částku sbírky.</string>
    <string name="warning">Upozornění</string>
    <string name="noEmptyParticipants">Všichni účastníci již mají částky zadané.</string>
    <string name="invalidEmail">Zadejte validní email adresu</string>
    <string name="mandatoryField">Povinné pole</string>
    <string name="invalidUrl">Není platné URL</string>
    <string name="invalidDate">Zadejte platné datum</string>
    <string name="participantDuplicity">Duplicitní účastník</string>
    <string name="noParticipants">Sbírka neobsahuje žádné účastníky.</string>
    <string name="friends24_server_payment_accept_url">http://startup.cloudapp.net:8080/Friends24Server/ui/incomePayment/</string>
    <string name="friends24_server_collection_accept_url">http://startup.cloudapp.net:8080/Friends24Server/ui/collectionParticipant/</string>
    <string name="fbCollectionMessage1">Ahoj, pořádám sbírku</string>
    <string name="fbCollectionNotifMessage1">Ahoj, připomínám se se sbírkou</string>
    <string name="fbCollectionNotifMessage2">Zatím nemám od Tebe žádné vyjádření, mrkni prosím na odkaz níže.</string>
    <string name="fbCollectionNotifMessage3">Slíbil si přispět ale zatím od tebe nic nedorazilo.</string>
    <string name="fbCollectionMessage2">Na odkazu níže najdeš další podrobnosti, včetně platebních instrukcí.</string>
    <string name="collection_confirm_1">Vašim {0} přátelům</string>
    <string name="collection_confirm_2">byla zaslána žádost o příspěvek do vaší sbírky. Stav sbírky si můžete kdykoliv zkontrolovat v aplikaci Friends24 nebo Servis24.</string>
    <string name="new_collection_link"><![CDATA[<u>NOVÁ SBÍRKA</u>]]></string>
    <string name="imageUploadTitle">Obrázek sbírky</string>
    <string name="imageUploadInProgress">Probíhá nahrávání</string>
    <string name="imageUploadDone">Obrázek byl úspěšně nahrán</string>
    <string name="imageUploadError">Chyba při nahrávání obrázku</string>
    <string name="notifyParticipantsTitle">Připomenutí účastníků</string>
    <string name="notifyParticipantsConfirmText">Chcete zaslat na Facebook a email připomenutí sbírky jednotlivým účastníkům?</string>
    <string name="collectionNotificationSuccess">Připomenutí účastníkům bylo zasláno.</string>
    <string name="collectionNotificationError">Došlo k chybě při zasílání připomenutí účastníkům.</string>
    <string name="invalidDueDate">Ukončení sbírky musí být nejdříve zítra</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="minAmountErr">Minimální částka je 0,11 Kč</string>
    <string name="maxAmountErr">Maximální částka je 2 mil. Kč</string>
    <string name="invalidAmountFormat">Nevalidní částka</string>
    <string name="sender_id">40497491311</string>
    <string name="notifPaymentAccepted">byla provedena</string>
    <string name="notifPaymentRefused">byla zamítnuta</string>
    <string name="notifPartAccepted">Slíbil příspět</string>
    <string name="notifPartRefused">Odmítl příspět</string>
    <string name="notifPartPayed">Příspěl</string>
    <string name="notifToYourCollection">na Vaši sbírku</string>
    <string name="notifCollectionStatusChange">Změna stavu sbírky. </string>
    <string name="notifPayment1">Platba</string>
    <string name="notifPaymentStatusChange">Změna stavu platby. </string>
</resources>
