<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/new_payment"
            android:layout_gravity="center_horizontal"/>

    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/accountSelector"
            android:layout_gravity="center_horizontal"/>

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="4"
            android:columnCount="2"
            android:useDefaultMargins="true">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:id="@+id/textView"
                android:layout_row="0"
                android:layout_column="0"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/amount"
                android:hint="@string/amountHint"
                android:layout_row="0"
                android:layout_column="1"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipent"
                android:layout_row="1"
                android:layout_column="0"
                android:textAlignment="gravity"
                android:layout_gravity="center_vertical"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_column="1"
                android:layout_row="1"
                >

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@id/pickFriend"
                    android:src="@drawable/pick_friend"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/selected_friend_name"
                    android:text="Martin"
                    android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messageForRecipient"
                android:layout_row="3"
                android:layout_column="0"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/messageForRecipient"
                android:hint="@string/messageForRecipient"
                android:layout_row="3"
                android:layout_column="1"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notif_email"
                android:layout_row="2"
                android:layout_column="0"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email"
                android:hint="@string/notif_email"
                android:layout_row="2"
                android:layout_column="1"
                />

    </GridLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/btnSend"
            android:layout_gravity="center_horizontal"/>


</LinearLayout>