<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:baselineAligned="true"
              android:background="@color/back_blue">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/light_blue"
            >

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/logof24"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"/>
    </FrameLayout>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginUsername"
            android:layout_gravity="center_horizontal"
            android:hint="@string/username"
            android:clickable="true"
            android:layout_marginTop="72dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loginPassword"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:layout_marginTop="5dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btnLogin"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/for_white"
            android:padding="4dp"
            android:layout_marginTop="48dp"
            android:onClick="onLogin"
            android:background="@drawable/button_red"
            android:clickable="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginHint"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/for_white"
            android:layout_marginTop="24dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginHintLink"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:autoLink="web"
            android:linksClickable="true"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="false"
                android:layout_centerHorizontal="true" android:layout_marginBottom="10dp"
                android:background="@drawable/logocs"/>

    </RelativeLayout>


</LinearLayout>