<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:facebook="http://schemas.android.com/apk/res-auto"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:background="@color/homepage_background"
         >
    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">


            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/back_blue"
                    android:paddingLeft="24dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:layout_marginBottom="20dp">



                <com.facebook.widget.ProfilePictureView
                        android:id="@+id/currentUser_profile_pic"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        facebook:preset_size="small" />
                <!--<ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView"
                        android:src="@drawable/ic_launcher"/>
-->
                <TextView
                        android:id="@+id/currentUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        android:text="ANASTÁZIE KOWALSKI"
                        android:layout_gravity="center_vertical"
                        android:editable="false"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/back_blue"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    >
                >

                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/RedButton"
                        android:text="@string/payment"
                        android:id="@+id/btnPayment"
                        android:onClick="onNewPayment"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"/>

                <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/RedButton"
                        android:text="@string/collection"
                        android:id="@+id/btnCollection"
                        android:onClick="onNewCollection"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"/>
            </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/for_white"
                android:paddingTop="15dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/my_accounts"
                    android:layout_marginBottom="15dp"/>

            <LinearLayout
                    android:id="@+id/accountList"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:background="@drawable/gray_rect_1"
                    android:showDividers="middle"
                    android:divider="@drawable/horizontal_divider_1"
                    >

                <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</ScrollView>


